k8s/postgresql-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30432
  type: NodePort
